--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ body {
 }
 
 .nav h1 {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
 
 .nav h2 {
